Bootstrap collapse is now in digest cycle. TODO: Cleanup code in collapse logic within the section headers. 2. Make sectiosn headers change color on hover. 3. Refactor to semantic css in the near future because the bootstrap collapse problem took way too long to solve and it was because i was sloppy with selectors. 4. Mobile headerrrrrrrrrrr..........

--- a/src/components/header/colors.sass
+++ b/src/components/header/colors.sass
@@ -1,10 +1,16 @@
 $BLACK-TRANS: rgba(5,0,5,0.84)
 $BLACK: rgba(51, 51, 51, 1)
 $BLACK-ALT: lighten($BLACK, 5%)
+$BLACK-DARK: darken($BLACK, 5%)
 $WHITE-TRANS: rgba(250, 250, 250, 0.85)
 $WHITE: rgb(250, 250, 250)
 
 $SILVER: rgba(160, 160, 160, 1)
 $RED: rgba(200,0,0,1)
 $PURPLE: rgba(145, 36, 151, 1)
-$RED-ALT: lighten($RED, 5%)
+$RED-ALT: lighten($RED, 5%) 
+
+.white
+	color: $WHITE
+.silver
+	color: $SILVER
